# algorithm-design-2020

./: CMakeLists.txt  README.md
01_brackets_matching/: CMakeLists.txt
01_brackets_matching/test_cases/: test07.in
02_count_smaller_numbers/: CMakeLists.txt
02_count_smaller_numbers/test_cases/: test04.out  test05.out  test06.out  test07.in  test08.in  test10.in  test10.out
03_find_majority_numbers/: CMakeLists.txt  main.cpp
03_find_majority_numbers/test_cases/: test05.out
04_interval_scheduling/: CMakeLists.txt
04_interval_scheduling/test_cases/: test03.in  test04.in  test05.in
05_cashier_algorithm/: CMakeLists.txt  main.cpp
05_cashier_algorithm/test_cases/: test06.out  test08.out  test11.out
06_interval_partitioning/: CMakeLists.txt  README.md  main.cpp
07.1_minimize_maximum_lateness/: CMakeLists.txt  main.cpp
07.1_minimize_maximum_lateness/test_cases/: test01.in  test03.in
07.2_minimize_total_lateness/: CMakeLists.txt
08_shortest_path/: CMakeLists.txt  main.cpp
09_minimal_spanning_tree/: CMakeLists.txt  main.cpp
10_single_linkage_clustering/: CMakeLists.txt
11_weighted_interval_scheduling/: CMakeLists.txt  main.cpp
12_0_1_knapsack_problem/: CMakeLists.txt
lab01_BracketsMatching/: CMakeLists.txt  README.md  main.cpp
lab01_brackets_matching/: CMakeLists.txt  main.cpp
lab02_CountSmallerNumbers/: CMakeLists.txt  README.md  main.cpp
lab02_count_smaller_numbers/: CMakeLists.txt  README.md  main.cpp
lab03_FindMajorityNumbers/: CMakeLists.txt  README.md  main.cpp
lab03_find_majority_number/: CMakeLists.txt  README.md  main.cpp
lab04_IntervalScheduling/: CMakeLists.txt  main.cpp
lab04_interval_scheduling/: CMakeLists.txt  README.md  main.cpp
lab05_CashiersAlgorithm/: CMakeLists.txt  README.md  main.cpp
lab05_cashiers_algorithm/: CMakeLists.txt  main.cpp
lab06_IntervalPartitioning/: CMakeLists.txt  main.cpp
lab06_interval_partitioning/: CMakeLists.txt  main.cpp
lab07_MinimizeMaximumLateness/: CMakeLists.txt  main.cpp
lab07_scheduling_to_minimize_maximum_lateness/: CMakeLists.txt  README.md  main.cpp
lab07ex1_MinimizeTotalLateness/: CMakeLists.txt  README.md  main.cpp
lab07ex1_scheduling_to_minimize_total_lateness/: CMakeLists.txt  README.md  main.cpp
lab08_ShortestPath/: CMakeLists.txt  main.cpp
lab08_shortest_path/: CMakeLists.txt  README.md  main.cpp
lab09_MinimalSpanningTree/: CMakeLists.txt  main.cpp
lab09_minimal_spanning_tree/: CMakeLists.txt  README.md  main.cpp
lab10_SingleLinkageClustering/: CMakeLists.txt  README.md  main.cpp
lab10_single_linkage_clustering/: CMakeLists.txt  main.cpp
lab11_WeightedIntervalScheduling/: CMakeLists.txt  README.md  main.cpp
lab11_weighted_interval_scheduling/: CMakeLists.txt  main.cpp
lab12_01KnapsackProblem/: CMakeLists.txt  README.md  main.cpp
(+93 files in other folders)
