cmake_minimum_required(VERSION 3.16)
project(AlgorithmDesign)

add_subdirectory(${PROJECT_SOURCE_DIR}/lab01_BracketsMatching)
add_subdirectory(${PROJECT_SOURCE_DIR}/lab02_CountSmallerNumbers)
add_subdirectory(${PROJECT_SOURCE_DIR}/lab03_FindMajorityNumbers)
add_subdirectory(${PROJECT_SOURCE_DIR}/lab04_IntervalScheduling)
add_subdirectory(${PROJECT_SOURCE_DIR}/lab05_CashiersAlgorithm)
add_subdirectory(${PROJECT_SOURCE_DIR}/lab06_IntervalPartitioning)
add_subdirectory(${PROJECT_SOURCE_DIR}/lab07_MinimizeMaximumLateness)
add_subdirectory(${PROJECT_SOURCE_DIR}/lab07ex1_MinimizeTotalLateness)
add_subdirectory(${PROJECT_SOURCE_DIR}/lab08_ShortestPath)
add_subdirectory(${PROJECT_SOURCE_DIR}/lab09_MinimalSpanningTree)
add_subdirectory(${PROJECT_SOURCE_DIR}/lab10_SingleLinkageClustering)
add_subdirectory(${PROJECT_SOURCE_DIR}/lab11_WeightedIntervalScheduling)
add_subdirectory(${PROJECT_SOURCE_DIR}/lab12_01KnapsackProblem)