cmake_minimum_required(VERSION 3.17)
project(algorithm_design_2020)

add_subdirectory(${PROJECT_SOURCE_DIR}/01_brackets_matching)
add_subdirectory(${PROJECT_SOURCE_DIR}/02_count_smaller_numbers)
add_subdirectory(${PROJECT_SOURCE_DIR}/03_find_majority_numbers)
add_subdirectory(${PROJECT_SOURCE_DIR}/04_interval_scheduling)
add_subdirectory(${PROJECT_SOURCE_DIR}/05_cashier_algorithm)
add_subdirectory(${PROJECT_SOURCE_DIR}/06_interval_partitioning)
add_subdirectory(${PROJECT_SOURCE_DIR}/07.1_minimize_maximum_lateness)
add_subdirectory(${PROJECT_SOURCE_DIR}/07.2_minimize_total_lateness)
add_subdirectory(${PROJECT_SOURCE_DIR}/08_shortest_path)
add_subdirectory(${PROJECT_SOURCE_DIR}/09_minimal_spanning_tree)
add_subdirectory(${PROJECT_SOURCE_DIR}/10_single_linkage_clustering)
add_subdirectory(${PROJECT_SOURCE_DIR}/11_weighted_interval_scheduling)
add_subdirectory(${PROJECT_SOURCE_DIR}/12_0_1_knapsack_problem)
